--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -50,6 +50,12 @@ ADC_SPI/MCP3x6x_SPI.cpp
 pico_set_program_name(le "le")
 pico_set_program_version(le "0.1")
 
+# Generate PIO header
+pico_generate_pio_header(le 
+    ${CMAKE_CURRENT_LIST_DIR}/src/blink.pio
+    ${CMAKE_CURRENT_LIST_DIR}/src/serial.pio
+    )
+
 # Modify the below lines to enable/disable output over UART/USB
 pico_enable_stdio_uart(le 0)
 pico_enable_stdio_usb(le 0)
